# cppThermalCamera

./: CMakeLists.txt  README.md  main.cpp
